@@ -1,0 +1,67 @@
+<?php
+
+/*
+
+  This code is part of LDAP Account Manager (http://www.ldap-account-manager.org/)
+  Copyright (C) 2024  Roland Gruber
+
+  This program is free software; you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation; either version 2 of the License, or
+  (at your option) any later version.
+
+  This program is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with this program; if not, write to the Free Software
+  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+*/
+
+/**
+ * Manages SSH public keys on Windows/Samba 4.
+ *
+ * @package modules
+ * @author Roland Gruber
+ */
+
+/** include parent class */
+include_once(__DIR__ . "/ldapPublicKey.inc");
+
+/**
+ * Manages SSH public keys on Windows/Samba 4.
+ *
+ * @package modules
+ */
+class altSecurityIdentities extends ldapPublicKey {
+
+	/**
+	 * {@inheritDoc}
+	 */
+	protected function getAttributeName(): string {
+		return 'altsecurityidentities';
+	}
+
+	/**
+	 * {@inheritDoc}
+	 */
+	protected function hasObjectClass(): bool {
+		return false;
+	}
+
+	/**
+	 * Returns meta data that is interpreted by parent class
+	 *
+	 * @return array array with meta data
+	 *
+	 * @see baseModule::get_metaData()
+	 */
+	function get_metaData() {
+		$ret = parent::get_metaData();
+		$ret["alias"] = _("SSH public key (AD)");
+		return $ret;
+	}
+
+}
